@@ -7,6 +7,6 @@ AUX symon-syweb-total_firewall.layout.patch 1673 RMD160 63e130338b7d48dc2debc4c2
 AUX symux-init.d 378 RMD160 438f3ee87579117db71fa346cd333cc4740b8a35 SHA1 bc5edf413f24aed698147767447f0266c4374415 SHA256 f887ab858987fc6f0984cba93dddbb1c82fb1ed515340002e373c0aa4541e584
 DIST symon-2.79.tar.gz 102400 RMD160 693b798cd6c564f4e8b79c62c1776f5b036aaf1a SHA1 a21566f3291baaa39806bec32550d5a28a163213 SHA256 7157b087b99a59f3aba9a02c375fb1b411dc4329463f748d2323c3cdf3d0cd83
 DIST syweb-0.58.tar.gz 40960 RMD160 5dffc149a078789703c1ee10699e8aab350313d7 SHA1 bf0aa3a96533f8d6ae38f5317ae001282510ced4 SHA256 c01dfbc9f069d73d7c92880a0ed05bd7bca3e970ab282c2deb706861af7d6dcf
-EBUILD symon-2.79.ebuild 3247 RMD160 7d120e4837f922f5d736d983df283279e9752301 SHA1 2f059622ba5904c1f4e0484cc3360f12dc0a06b6 SHA256 7188a9606bf4c03b852870bef414505c4eb7556f4fbb1877194079f370a459c0
-MISC ChangeLog 4579 RMD160 e4a67da556bda8d8e9468f4df703254234f23ee2 SHA1 10b1bef35617a39390a3b9cc41cd0c9d023a0008 SHA256 0b20ff61f07772247c96d52bb8e4c255462980888fab76e09c6ec6a9daea4f72
+EBUILD symon-2.79.ebuild 3231 RMD160 a0fe05b46ce1c8bdf849ce9871d666563f5ac769 SHA1 d1c2af33d58e3536ba06ac36e80d98c88a2fb407 SHA256 2d426462024f84a778fede5d188aad0a8a2017d671bb1ecebc5c93e388c07b92
+MISC ChangeLog 4742 RMD160 756a459da0ada066f7325b965a97c0f524bae378 SHA1 d04825ccbbd1de0f7182b71e029145959b70b8f5 SHA256 5918904e542297a5712a0b84d17081c8b58eee1dd562553aaf7b73327abcfcaf
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
